[package]
authors = ["e-matteson <e.r.matteson@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "keypad-bluepill-example"
version = "0.1.0"

[dependencies]
keypad = "0.2.2"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
